--- a/app/views/elements/index.html.haml
+++ b/app/views/elements/index.html.haml
@@ -1,5 +1,6 @@
 %h1 Your Elements
 
+%h2= link_to('Add new Element', new_element_path)
 %ul
   - @elements.each do |element|
     = render :partial => 'tree', :locals => { :element => element }
