visual cleanup, add default select values

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,3 +5,12 @@
  *= require_self
  *= require_tree . 
 */
+
+body {
+  color: #555;
+  font-family: Helvetica, sans-serif;
+}
+
+#todo {
+  margin: 0;
+}
