--- a/app/views/elements/_form.html.haml
+++ b/app/views/elements/_form.html.haml
@@ -1,18 +1,21 @@
 = form_for @element do |f|
   - if @element.parent_id
-    .field
-      = f.hidden_field :parent_id
-  .field
-    = f.label :title
-    = f.text_field :title
-    = error_message_on(@element, :title)
-  .field
-    = f.label :value
-    = f.select :value, options_for_select(0..9)
-    = error_message_on(@element, :value)
-  .field
-    = f.label :urgency
-    = f.select :urgency, options_for_select(0..9)
-    = error_message_on(@element, :urgency)
-  .actions
-    = f.submit
+    = f.hidden_field :parent_id
+  %h3 #{@element.value}, #{@element.urgency}
+  %table
+    %tr
+      %td= f.label 'Title:'
+      %td
+        = f.text_field :title
+        = error_message_on(@element, :title)
+    %tr
+      %td= f.label 'Value:'
+      %td
+        = f.select :value, options_for_select(0..9, @element.value)
+        = error_message_on(@element, :value)
+    %tr
+      %td= f.label 'Urgency:'
+      %td
+        = f.select :urgency, options_for_select(0..9, @element.urgency)
+        = error_message_on(@element, :urgency)
+  = f.submit
