--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,8 @@
     = javascript_include_tag :application
     = csrf_meta_tag
 
+%h1#todo TODO
+
 #user_nav
   - if current_user
     Logged in as #{current_user.email}
@@ -15,6 +17,7 @@
     = link_to "Sign up", sign_up_path
     or
     = link_to "Log in", login_path
+%hr
 
   %body
     - flash.each do |name, msg|
