--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,12 +2,12 @@
 
 %html
   %head
-    %title Todo
+    %title Elements
     = stylesheet_link_tag :application
     = javascript_include_tag :application
     = csrf_meta_tag
 
-%h1#todo TODO
+%h1#elements ELEMENTS
 
 #user_nav
   - if current_user
