simplify rendering of layouts

--- a/app/views/elements/_tree.html.haml
+++ b/app/views/elements/_tree.html.haml
@@ -15,4 +15,4 @@
   - if element.children.any?
     %ul
       - element.children.each do |child|
-        = render :partial => 'tree', :locals => { :element => child }
+        = render 'tree', :element => child
