refactors in views

--- a/app/views/elements/_element.html.haml
+++ b/app/views/elements/_element.html.haml
@@ -14,5 +14,4 @@
       :confirm => 'Delete this element?')
   - if element.children.any?
     %ul
-      - element.children.each do |child|
-        = render 'tree', :element => child
+      = render element.children
